--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <title>Obotzone – Teknologi, Eksperimen, dan Proyek</title>
+  <meta name="description" content="Obot suka teknologi, bereksperimen, dan menulis catatan praktis tentang website, VPS, bot, otomasi, serta proyek nyata." />
+  <link rel="canonical" href="https://obotzone.id/" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Obotzone – Teknologi, Eksperimen, dan Proyek" />
+  <meta property="og:description" content="Catatan, proyek, dan eksperimen seputar website, VPS, bot, dan otomasi." />
+  <meta property="og:url" content="https://obotzone.id/" />
+  <meta property="og:image" content="https://obotzone.id/og-default.jpg" />
+  <meta property="og:locale" content="id_ID" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Obotzone – Teknologi, Eksperimen, dan Proyek" />
+  <meta name="twitter:description" content="Catatan, proyek, dan eksperimen seputar website, VPS, bot, dan otomasi." />
+  <meta name="twitter:image" content="https://obotzone.id/og-default.jpg" />
+
+  <!-- PWA basics (opsional) -->
+  <link rel="icon" href="/favicon.png" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Person",
+    "name":"Obot",
+    "url":"https://obotzone.id/",
+    "email":"mailto:obotzone.contact@gmail.com",
+    "telephone":"+6287779794633",
+    "sameAs":[]
+  }
+  </script>
+
+  <link rel="stylesheet" href="/style.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="wrap">
+      <h1>Obotzone</h1>
+      <p>Penggemar teknologi yang senang bereksperimen, belajar hal baru, dan mengerjakan proyek nyata.</p>
+      <div class="cta">
+        <a class="btn" href="mailto:obotzone.contact@gmail.com">Email Saya</a>
+        <a class="btn outline" href="https://wa.me/6287779794633" rel="noopener">WhatsApp</a>
+      </div>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section>
+      <h2>Tentang Saya</h2>
+      <p>
+        Saya penggemar teknologi dengan pengalaman di berbagai bidang. Tidak menyebut diri sebagai expert,
+        tapi juga bukan pemula—lebih suka bergerak cepat, mencoba, lalu merapikan.
+      </p>
+      <div class="tags">
+        <span class="tag">Teknologi</span>
+        <span class="tag">Edukasi</span>
+        <span class="tag">Eksperimen</span>
+        <span class="tag">Belajar Hal Baru</span>
+      </div>
+    </section>
+
+    <section>
+      <h2>Layanan & Keahlian</h2>
+      <ul class="cards">
+        <li class="card"><h3>Website WordPress</h3><p>Setup, tema, plugin, optimasi dasar.</p></li>
+        <li class="card"><h3>Sales Page</h3><p>Halaman fokus konversi. Contoh: <a href="https://hifibandung.com" target="_blank" rel="noopener">hifibandung.com</a>.</p></li>
+        <li class="card"><h3>Expired Domain</h3><p>Riset metrik dasar untuk SEO & branding.</p></li>
+        <li class="card"><h3>VPN + AdGuard</h3><p>VPN pribadi dari VPS dengan pemblokiran iklan/trackers.</p></li>
+        <li class="card"><h3>Bot CS Telegram</h3><p>n8n + ChatGPT untuk otomasi percakapan.</p></li>
+        <li class="card"><h3>Forensik Perangkat</h3><p>Penggunaan Cellebrite level pengguna.</p></li>
+        <li class="card"><h3>Privasi & Anti-Tracking</h3><p>Kebiasaan & alat untuk minim jejak.</p></li>
+        <li class="card"><h3>Get Location from URL</h3><p>Tautan yang meminta lokasi (dengan izin).</p></li>
+        <li class="card"><h3>Aplikasi Sistem Informasi</h3><p>Web sederhana untuk manajemen data.</p></li>
+        <li class="card"><h3>Hosting via HestiaCP</h3><p>Kelola VPS: domain, SSL, email, deploy.</p></li>
+        <li class="card"><h3>Perbaikan HP</h3><p>Layar, tombol, port charger (dasar).</p></li>
+        <li class="card"><h3>Instal Windows/Office & Linux</h3><p>Setup bersih & rapi.</p></li>
+        <li class="card"><h3>Perbaikan Ringan PC</h3><p>Diagnosa awal & perapihan.</p></li>
+        <li class="card"><h3>Pembuatan PowerPoint</h3><p>Slide rapi, fokus alur & visual.</p></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Portofolio</h2>
+      <ul class="portfolio">
+        <li>
+          <span class="title">Sales Page Internet Lokal</span><span class="dot"></span>
+          <a href="https://hifibandung.com" target="_blank" rel="noopener">hifibandung.com</a>
+        </li>
+        <li>
+          <span class="title">VPN Pribadi + AdGuard</span><span class="dot"></span>
+          <a class="muted" href="/portfolio/vpn-adguard.html">Detail proyek</a>
+        </li>
+        <li>
+          <span class="title">Bot CS Telegram</span><span class="dot"></span>
+          <a class="muted" href="/portfolio/bot-cs-telegram.html">Detail proyek</a>
+        </li>
+      </ul>
+      <p class="note">Portofolio lengkap: <a href="/portfolio/">/portfolio</a></p>
+    </section>
+
+    <section>
+      <h2>Kontak</h2>
+      <div class="contact">
+        <p>Email: <a href="mailto:obotzone.contact@gmail.com">obotzone.contact@gmail.com</a></p>
+        <p>WhatsApp: <a href="https://wa.me/6287779794633" rel="noopener">087779794633</a></p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap"><p>© 2025 Obotzone</p></div>
+  </footer>
+</body>
+                                                                              </html>
