--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         </li>
         <li>
           <span class="title">VPN Pribadi + AdGuard</span><span class="dot"></span>
-          <a class="muted" href="/portfolio/vpn-adguard.html">Detail proyek</a>
+          <a class="muted" href="/portofolio/vpn-adguard.html">Detail proyek</a>
         </li>
         <li>
           <span class="title">Bot CS Telegram</span><span class="dot"></span>
-          <a class="muted" href="/portfolio/bot-cs-telegram.html">Detail proyek</a>
+          <a class="muted" href="/portofolio/bot-cs-telegram.html">Detail proyek</a>
         </li>
       </ul>
-      <p class="note">Portofolio lengkap: <a href="/portfolio/">/portfolio</a></p>
+      <p class="note">Portofolio lengkap: <a href="/portofolio/">/portofolio</a></p>
     </section>
 
     <section>
