--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -40,12 +40,12 @@
       <li class="card">
         <h3>VPN Pribadi + AdGuard</h3>
         <p>VPN pribadi di VPS dengan pemblokiran iklan & trackers.</p>
-        <p><a href="/portfolio/vpn-adguard.html">Detail proyek</a></p>
+        <p><a href="/portofolio/vpn-adguard.html">Detail proyek</a></p>
       </li>
       <li class="card">
         <h3>Bot CS Telegram (n8n + ChatGPT)</h3>
         <p>Otomasi tanya jawab dan alur layanan.</p>
-        <p><a href="/portfolio/bot-cs-telegram.html">Detail proyek</a></p>
+        <p><a href="/portofolio/bot-cs-telegram.html">Detail proyek</a></p>
       </li>
     </ul>
     <p class="note" style="margin-top:14px">Proyek lain akan ditambahkan bertahap.</p>
