--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -1,54 +1,83 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>Portofolio – Obotzone</title>
-  <meta name="description" content="Kumpulan proyek dan eksperimen Obot: website, VPN, bot Telegram, dan otomasi." />
-  <link rel="canonical" href="https://obotzone.id/portfolio/" />
-
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Portofolio – Obotzone" />
-  <meta property="og:description" content="Website, VPN, bot Telegram, otomasi, dan proyek lain." />
-  <meta property="og:url" content="https://obotzone.id/portfolio/" />
-  <meta property="og:image" content="https://obotzone.id/og-default.jpg" />
-
-  <!-- BreadcrumbList -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"BreadcrumbList",
-    "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Beranda","item":"https://obotzone.id/"},
-      {"@type":"ListItem","position":2,"name":"Portofolio","item":"https://obotzone.id/portfolio/"}
-    ]
-  }
-  </script>
-
-  <link rel="stylesheet" href="/style.css" />
+  <title>Portfolio — Obotzone</title>
+  <meta name="description" content="Selected work: websites, automation, private networking, and lightweight repairs." />
+  <link rel="canonical" href="https://obotzone.id/portofolio/" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <main class="wrap" style="padding:40px 20px">
-    <h1>Portofolio</h1>
-    <ul class="cards" style="margin-top:20px">
-      <li class="card">
-        <h3>Sales Page Internet Lokal</h3>
-        <p>Halaman promosi ringkas fokus konversi.</p>
-        <p><a href="https://hifibandung.com" target="_blank" rel="noopener">Lihat situs</a></p>
-      </li>
-      <li class="card">
-        <h3>VPN Pribadi + AdGuard</h3>
-        <p>VPN pribadi di VPS dengan pemblokiran iklan & trackers.</p>
-        <p><a href="/portofolio/vpn-adguard.html">Detail proyek</a></p>
-      </li>
-      <li class="card">
-        <h3>Bot CS Telegram (n8n + ChatGPT)</h3>
-        <p>Otomasi tanya jawab dan alur layanan.</p>
-        <p><a href="/portofolio/bot-cs-telegram.html">Detail proyek</a></p>
-      </li>
-    </ul>
-    <p class="note" style="margin-top:14px">Proyek lain akan ditambahkan bertahap.</p>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">Obotzone</a>
+      <nav aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li class="has-dropdown">
+            <button class="dropbtn" aria-haspopup="true" aria-expanded="false">Work</button>
+            <ul class="dropdown" aria-label="submenu">
+              <li><a href="/portofolio/">Portfolio Overview</a></li>
+              <li><a href="/portofolio/vpn-adguard.html">VPN + AdGuard</a></li>
+              <li><a href="/portofolio/bot-cs-telegram.html">Telegram CS Bot</a></li>
+            </ul>
+          </li>
+          <li><a href="/#services">Services</a></li>
+          <li><a href="/#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="hero-min">
+    <div class="container">
+      <h1>Portfolio Overview</h1>
+      <p>Short, practical summaries with links to details and live examples.</p>
+    </div>
+  </section>
+
+  <main class="container">
+    <section>
+      <div class="grid-3">
+        <article class="card-min">
+          <h3>Sales Landing Page</h3>
+          <p>Focused copy and fast load. Live example:</p>
+          <p><a href="https://hifibandung.com" target="_blank" rel="noopener">hifibandung.com</a></p>
+        </article>
+
+        <article class="card-min">
+          <h3>VPN + AdGuard</h3>
+          <p>Self-hosted WireGuard with network-level ad & tracker filtering.</p>
+          <p><a href="/portofolio/vpn-adguard.html">Read case</a></p>
+        </article>
+
+        <article class="card-min">
+          <h3>Telegram CS Bot</h3>
+          <p>Automated first-response flows using n8n + ChatGPT.</p>
+          <p><a href="/portofolio/bot-cs-telegram.html">Read case</a></p>
+        </article>
+
+        <article class="card-min">
+          <h3>VPS Hosting (HestiaCP)</h3>
+          <p>Domain, SSL, email, deployment, and basic hardening.</p>
+        </article>
+
+        <article class="card-min">
+          <h3>Basic Device / PC Fix</h3>
+          <p>OS installation (Windows/Linux/Office), light diagnostics, screen/port/button repairs.</p>
+        </article>
+
+        <article class="card-min">
+          <h3>Docs & Slides</h3>
+          <p>Clear documentation and clean PowerPoint decks.</p>
+        </article>
+      </div>
+    </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="container"><p>© 2025 Obotzone</p></div>
+  </footer>
 </body>
 </html>
