--- a/portofolio/bot-cs-telegram.html
+++ b/portofolio/bot-cs-telegram.html
@@ -1,63 +1,71 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>Bot CS Telegram (n8n + ChatGPT) – Portofolio Obotzone</title>
-  <meta name="description" content="Otomasi layanan pelanggan di Telegram menggunakan n8n dan ChatGPT untuk respons cepat." />
-  <link rel="canonical" href="https://obotzone.id/portfolio/bot-cs-telegram.html" />
-
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Bot CS Telegram (n8n + ChatGPT) – Portofolio Obotzone" />
-  <meta property="og:description" content="Otomasi tanya jawab dan alur layanan pelanggan di Telegram." />
-  <meta property="og:url" content="https://obotzone.id/portfolio/bot-cs-telegram.html" />
-  <meta property="og:image" content="https://obotzone.id/og-default.jpg" />
-
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Project",
-    "name":"Bot CS Telegram (n8n + ChatGPT)",
-    "url":"https://obotzone.id/portfolio/bot-cs-telegram.html",
-    "description":"Otomasi layanan pelanggan di Telegram menggunakan n8n dan ChatGPT.",
-    "creator":{"@type":"Person","name":"Obot"}
-  }
-  </script>
-
-  <link rel="stylesheet" href="/style.css" />
+  <title>Case Study — Telegram CS Bot (n8n + ChatGPT) | Obotzone</title>
+  <meta name="description" content="Automated first-response flows for customer support using n8n and ChatGPT." />
+  <link rel="canonical" href="https://obotzone.id/portofolio/bot-cs-telegram.html" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <main class="wrap" style="padding:40px 20px">
-    <a href="/portfolio/" style="text-decoration:none">← Kembali ke Portofolio</a>
-    <h1 style="margin-top:12px">Bot CS Telegram (n8n + ChatGPT)</h1>
-    <p class="muted">Peran: perancangan alur • Tech: Telegram Bot API, n8n, ChatGPT</p>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">Obotzone</a>
+      <nav aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li class="has-dropdown">
+            <button class="dropbtn" aria-haspopup="true" aria-expanded="false">Work</button>
+            <ul class="dropdown" aria-label="submenu">
+              <li><a href="/portofolio/">Portfolio Overview</a></li>
+              <li><a href="/portofolio/vpn-adguard.html">VPN + AdGuard</a></li>
+              <li><a href="/portofolio/bot-cs-telegram.html">Telegram CS Bot</a></li>
+            </ul>
+          </li>
+          <li><a href="/#services">Services</a></li>
+          <li><a href="/#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section style="margin-top:18px">
-      <h2>Ringkas</h2>
-      <p>Membangun alur tanya jawab otomatis dan respons cepat untuk pertanyaan umum pelanggan.</p>
-    </section>
+  <section class="hero-min">
+    <div class="container">
+      <h1>Telegram CS Bot (n8n + ChatGPT)</h1>
+      <p>Automated answers for frequent questions and first-response routing.</p>
+    </div>
+  </section>
 
+  <main class="container">
     <section>
-      <h2>Tujuan</h2>
-      <ul class="list">
-        <li>Mempercepat respons awal pelanggan.</li>
-        <li>Menangani pertanyaan berulang secara otomatis.</li>
+      <h2>Goal</h2>
+      <ul class="list-links">
+        <li>Reduce response time for common inquiries.</li>
+        <li>Keep conversations clear and polite.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Hasil</h2>
-      <ul class="list">
-        <li>Respons lebih cepat & konsisten.</li>
-        <li>Alur bisa dikembangkan sesuai kebutuhan.</li>
+      <h2>Approach</h2>
+      <ul class="list-links">
+        <li>Design flows in n8n with Telegram Bot API.</li>
+        <li>Use ChatGPT for short and relevant replies.</li>
+        <li>Escalate to human when needed.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Catatan</h2>
-      <p>Integrasi lanjutan bisa menambah CRM, notifikasi, atau analitik percakapan.</p>
+      <h2>Result</h2>
+      <ul class="list-links">
+        <li>Faster first response and consistent tone.</li>
+        <li>Flows can expand to CRM or analytics later.</li>
+      </ul>
     </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="container"><p>© 2025 Obotzone</p></div>
+  </footer>
 </body>
 </html>
