--- a/portofolio/vpn-adguard.html
+++ b/portofolio/vpn-adguard.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>VPN Pribadi + AdGuard – Portofolio Obotzone</title>
-  <meta name="description" content="Menyediakan VPN pribadi dari VPS dengan AdGuard untuk pemblokiran iklan dan pelacakan." />
-  <link rel="canonical" href="https://obotzone.id/portfolio/vpn-adguard.html" />
-
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="VPN Pribadi + AdGuard – Portofolio Obotzone" />
-  <meta property="og:description" content="VPN pribadi dari VPS + AdGuard untuk pengalaman internet lebih bersih." />
-  <meta property="og:url" content="https://obotzone.id/portfolio/vpn-adguard.html" />
-  <meta property="og:image" content="https://obotzone.id/og-default.jpg" />
-
-  <!-- Schema Project -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Project",
-    "name":"VPN Pribadi + AdGuard",
-    "url":"https://obotzone.id/portfolio/vpn-adguard.html",
-    "description":"VPN pribadi dari VPS dengan AdGuard untuk memblokir iklan dan trackers.",
-    "creator":{"@type":"Person","name":"Obot"}
-  }
-  </script>
-
-  <link rel="stylesheet" href="/style.css" />
+  <title>Case Study — VPN + AdGuard | Obotzone</title>
+  <meta name="description" content="Private WireGuard VPN with AdGuard DNS for cleaner, safer browsing." />
+  <link rel="canonical" href="https://obotzone.id/portofolio/vpn-adguard.html" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <main class="wrap" style="padding:40px 20px">
-    <a href="/portfolio/" style="text-decoration:none">← Kembali ke Portofolio</a>
-    <h1 style="margin-top:12px">VPN Pribadi + AdGuard</h1>
-    <p class="muted">Peran: setup & konfigurasi dasar • Tech: VPS, WireGuard/wg-easy, AdGuard</p>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">Obotzone</a>
+      <nav aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li class="has-dropdown">
+            <button class="dropbtn" aria-haspopup="true" aria-expanded="false">Work</button>
+            <ul class="dropdown" aria-label="submenu">
+              <li><a href="/portofolio/">Portfolio Overview</a></li>
+              <li><a href="/portofolio/vpn-adguard.html">VPN + AdGuard</a></li>
+              <li><a href="/portofolio/bot-cs-telegram.html">Telegram CS Bot</a></li>
+            </ul>
+          </li>
+          <li><a href="/#services">Services</a></li>
+          <li><a href="/#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section style="margin-top:18px">
-      <h2>Ringkas</h2>
-      <p>Menyediakan VPN pribadi di VPS, mengaktifkan AdGuard untuk memblokir iklan dan pelacakan di tingkat jaringan.</p>
-    </section>
+  <section class="hero-min">
+    <div class="container">
+      <h1>VPN + AdGuard</h1>
+      <p>Self-hosted WireGuard with AdGuard to reduce ads and tracking for all connected devices.</p>
+    </div>
+  </section>
 
+  <main class="container">
     <section>
-      <h2>Tujuan</h2>
-      <ul class="list">
-        <li>Koneksi aman dan stabil untuk perangkat harian.</li>
-        <li>Meminimalkan iklan & pelacakan.</li>
+      <h2>Goal</h2>
+      <ul class="list-links">
+        <li>Private, stable VPN across phone and PC.</li>
+        <li>Network-level filtering for ads and trackers.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Hasil</h2>
-      <ul class="list">
-        <li>VPN aktif di perangkat (HP/PC).</li>
-        <li>Pemblokiran iklan dasar berjalan.</li>
+      <h2>Approach</h2>
+      <ul class="list-links">
+        <li>Provision VPS and secure baseline (firewall, updates).</li>
+        <li>Install WireGuard (wg-easy) and AdGuard.</li>
+        <li>Create profiles, test throughput & latency.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Catatan</h2>
-      <p>Konfigurasi disesuaikan kebutuhan; fokus pada kestabilan dan kemudahan pemakaian.</p>
+      <h2>Result</h2>
+      <ul class="list-links">
+        <li>Reliable connection on mobile and desktop.</li>
+        <li>Noticeably fewer ads and trackers.</li>
+      </ul>
     </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="container"><p>© 2025 Obotzone</p></div>
+  </footer>
 </body>
 </html>
