--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section class="hero-min">
     <div class="container">
       <h1>Clear tech. Practical results.</h1>
-      <p>I design simple solutions around websites, automation, and private infrastructure—documented in plain English.</p>
+      <p>I design simple solutions around websites, automation, and private infrastructure.</p>
     </div>
   </section>
 
@@ -67,7 +67,7 @@
       <div class="grid-3">
         <article class="card-min">
           <h3>Website & Landing</h3>
-          <p>Fast, minimal pages for clear messaging and conversion. Example: <a href="https://hifibandung.com" target="_blank" rel="noopener">hifibandung.com</a>.</p>
+          <p>Fast, minimal pages for clear messaging and conversion page one. Example: <a href="https://hifibandung.com" target="_blank" rel="noopener">hifibandung.com</a>.</p>
         </article>
         <article class="card-min">
           <h3>Automation & Bots</h3>
