--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <meta property="og:title" content="Obotzone — Technology • Projects • Notes" />
   <meta property="og:description" content="Clean, simple portfolio showcasing tech work and learning notes." />
   <meta property="og:url" content="https://obotzone.id/" />
-  <meta property="og:image" content="https://obotzone.id/og-default.jpg" />
+  <meta property="og:image" content="https://i.postimg.cc/s2jJhHf7/obotzone.png" />
 
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="https://i.postimg.cc/s2jJhHf7/obotzone.png" />
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
