--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
   <!-- Top navigation with dropdown -->
   <header class="site-header">
+    <img src="obotzone.png" alt="Obotzone Logo" class="logo">
+  <h1>Obotzone</h1>
     <div class="container nav">
       <a class="brand" href="/">Obotzone</a>
       <nav aria-label="Primary">
