--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </nav>
     </div>
   </header>
+  <img src="obotzone.png" alt="Obotzone Logo" class="logo">
 
   <!-- Hero: concise and professional -->
   <section class="hero-min">
