--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       </nav>
     </div>
   </header>
-  <img src="obotzone.png" alt="Obotzone Logo" class="logo">
-
+  
   <!-- Hero: concise and professional -->
   <section class="hero-min">
     <div class="container">
+      <img src="obotzone.png" alt="Obotzone Logo" class="hero-logo">
       <h1>Clear tech. Practical results.</h1>
       <p>I design simple solutions around websites, automation, and private infrastructure.</p>
     </div>
